made it work with mac osx laptop, fixed lineitem relationship